Source/WebCore/layout/formattingContexts/inline/InlineLineTypes.h
@@ -76,6 +76,11 @@ struct PreviousLine {
     Vector<const Box*> suspendedFloats;
 };
 
+struct PreviousContent {
+    bool hasInlineContent { false };
+    PreviousLine previousLine { };
+};
+
 inline InlineItemRange::InlineItemRange(InlineItemPosition start, InlineItemPosition end)
     : start(start)
     , end(end)
